Bug #10370
sunmdi: cast between incompatible function types
Start date:
2019-02-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Description
Build error from gcc 8:
../../common/os/sunmdi.c: In function 'mdi_failover': ../../common/os/sunmdi.c:1852:36: error: cast between incompatible function types from 'int (*)(void *)' to 'void (*)(void *)' [-Werror=cast-function-type] (void) taskq_dispatch(mdi_taskq, (task_func_t *)i_mdi_failover, ^ cc1: all warnings being treated as errors
History
Updated by Electric Monk 10 months ago
- % Done changed from 90 to 100
- Status changed from In Progress to Closed
git commit 9426efbbd0cbf49bc29df076259d21faff4226a9
commit 9426efbbd0cbf49bc29df076259d21faff4226a9 Author: Toomas Soome <tsoome@me.com> Date: 2019-02-13T19:11:49.000Z 10370 sunmdi: cast between incompatible function types Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Hans Rosenfeld <hans.rosenfeld@joyent.com>