10370 sunmdi: cast between incompatible function types Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Hans Rosenfeld <hans.rosenfeld@joyent.com>