usr/src/uts/common/os/sunmdi.c
@@ -1742,6 +1742,12 @@ mdi_set_lb_policy(dev_info_t *cdip, client_lb_t lb)
 	return (rv);
 }
 
+static void
+mdi_failover_cb(void *arg)
+{
+	(void)i_mdi_failover(arg);
+}
+
 /*
  * mdi_failover():
  *		failover function called by the vHCI drivers to initiate
@@ -1849,8 +1855,7 @@ mdi_failover(dev_info_t *vdip, dev_info_t *cdip, int flags)
 		 * Submit the initiate failover request via CPR safe
 		 * taskq threads.
 		 */
-		(void) taskq_dispatch(mdi_taskq, (task_func_t *)i_mdi_failover,
-		    ct, KM_SLEEP);
+		(void) taskq_dispatch(mdi_taskq, mdi_failover_cb, ct, KM_SLEEP);
 		return (MDI_ACCEPT);
 	} else {
 		/*
